# audio2text

./: .gitignore  README.md  accuracy_corrections.example.json  pyproject.toml  requirements-accuracy.txt  requirements-gpu.txt  requirements.txt  run_gui.bat  run_tests.bat  setup.bat  setup_accuracy.bat  transcribe.py  transcribe_accuracy.py  transcribe_cli.py  transcribe_gui.py
.github/workflows/: ci.yml
a2t_lib/: __init__.py  accuracy.py  checkpoint.py  config.py  engine.py  gui_widgets.py  hardware.py  postprocess.py  runtime.py  timestamps.py
tests/: test_accuracy.py  test_checkpoint.py  test_cli.py  test_config.py  test_engine.py  test_gui.py  test_hardware.py  test_postprocess.py  test_runtime.py  test_timestamps.py
